--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -182,7 +182,7 @@ layout: compress
 
       <nav class="dropdown-links" id="researchLinks" aria-label="Research and profile links" role="region">
         <a href="/research-areas" target="_blank" rel="noopener noreferrer">Research Areas</a>
-        <a href="/publications.html" rel="noopener noreferrer">Research Publications</a>
+        <a href="/publications" rel="noopener noreferrer">Research Publications</a>
         <a href="https://scholar.google.com/citations?hl=en&user=ulUkkPus9M0C" target="_blank" rel="noopener noreferrer">Google Scholar</a>
         <a href="https://www.researchgate.net/profile/Farrukh-Aziz-6" target="_blank" rel="noopener noreferrer">ResearchGate</a>
         <a href="https://orcid.org/0000-0001-7088-0371" target="_blank" rel="noopener noreferrer">ORCID Profile</a>
